# forge

./: CMakeLists.txt  README.org
benchmark/: CMakeLists.txt  benchmark.cpp
include/: col_iterator.hpp  matrix.hpp  row_iterator.hpp
include/forge/: aligned_allocator.hpp  col_iterator.hpp  math.hpp  matrix.hpp  row_iterator.hpp
include/forge/simd/: simd_math.hpp
src/: main.cpp  matrix.hpp
test/: CMakeLists.txt  test.cpp  test_col_iterator.hpp  test_matrix.hpp  test_row_iterator.hpp
